Bug 411971 - Linked perspective assistants distort after image transformation
Summary: Linked perspective assistants distort after image transformation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Assistants (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-16 13:56 UTC by M
Modified: 2019-09-16 15:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description M 2019-09-16 13:56:17 UTC
SUMMARY
Linked perspective assistants which share an edge get distorted after the image is transformed by scaling, rotating or shearing, or the canvas is resized.

STEPS TO REPRODUCE
1. Add a perspective assistant to an open document
2. Drag out one of the edge handles to attach a shared second perspective assistant
3. Optionally add a separate perspective assistant or other assistant types for comparison
4. Use a transform operation from the Image menu, or use Resize Canvas

OBSERVED RESULT
The linked perspective assistant is distorted, while the other assistants are transformed correctly with the contents of the document.

EXPECTED RESULT
The linked perspective assistant behaves like the other types, so that it matches the image transformation.

SOFTWARE/OS VERSIONS
Tested in master (git 68fe323).
Comment 1 Dmitry Kazakov 2019-09-16 15:48:52 UTC
Git commit 71126cc3605815e3f045bb2464174d05c89bbf1d by Dmitry Kazakov.
Committed on 16/09/2019 at 15:30.
Pushed by dkazakov into branch 'master'.

Fix transformation of prespective assistants with secondary cages

If the assistant handle is owned by multiple assistants, then
transformation should be performed only by the "chief" assistant.

M  +9    -0    libs/ui/kis_painting_assistant.cc
M  +7    -0    libs/ui/kis_painting_assistant.h

https://invent.kde.org/kde/krita/commit/71126cc3605815e3f045bb2464174d05c89bbf1d