Fix transformation of prespective assistants with secondary cages

If the assistant handle is owned by multiple assistants, then
transformation should be performed only by the "chief" assistant.

BUG:411971